--- a/2.0/notebooks/02_Preprocessing_and_Feat_Eng.ipynb
+++ b/2.0/notebooks/02_Preprocessing_and_Feat_Eng.ipynb
@@ -64,7 +64,7 @@
    "id": "f0589d0d-4e7b-4eea-8fbb-00855ed661a2",
    "metadata": {},
    "source": [
-    "**Reading in Dummified Data**"
+    "**Reading in Data**"
    ]
   },
   {
