--- a/2.0/notebooks/03_Modeling.ipynb
+++ b/2.0/notebooks/03_Modeling.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "0ce93f3c-79c8-4272-988f-b8d0677c66c9",
    "metadata": {},
    "outputs": [],
@@ -45,8 +45,8 @@
     "sns.set(style = \"darkgrid\")\n",
     "\n",
     "from sklearn import metrics \n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.linear_model import LinearRegression, LassoCV, RidgeCV\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.linear_model import LinearRegression, LassoCV, RidgeCV, HuberRegressor\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, cross_val_predict"
    ]
@@ -67,8 +67,8 @@
    "outputs": [],
    "source": [
     "#reading in training and testing data\n",
-    "ames_df = pd.read_csv('../datasets/train_clean.csv')\n",
-    "ames_test_df = pd.read_csv('../datasets/test_clean.csv')"
+    "ames_df = pd.read_csv('../datasets/train_model_ready.csv')\n",
+    "ames_test_df = pd.read_csv('../datasets/test_model_ready.csv')"
    ]
   },
   {
@@ -1392,7 +1392,9 @@
        "       'total_bsmt_sf', '1st_flr_sf', 'year_built', 'year_remod/add',\n",
        "       'full_bath', 'garage_yr_blt', 'totrms_abvgrd', 'mas_vnr_area',\n",
        "       'fireplaces', 'bsmtfin_sf_1', 'open_porch_sf', 'wood_deck_sf',\n",
-       "       'lot_frontage', 'lot_area', 'bsmt_full_bath', 'half_bath'],\n",
+       "       'lot_frontage', 'lot_area', 'bsmt_full_bath', 'half_bath', '2nd_flr_sf',\n",
+       "       'bsmt_unf_sf', 'bedroom_abvgr', 'screen_porch', 'kitchen_abvgr',\n",
+       "       'enclosed_porch'],\n",
        "      dtype='object')"
       ]
      },
@@ -1403,7 +1405,7 @@
    ],
    "source": [
     "ames_corr = ames_df.corr()['saleprice'][:-1]\n",
-    "list_feats = ames_corr[(ames_corr > 0.25)].sort_values(ascending = False).keys()\n",
+    "list_feats = ames_corr[(ames_corr > 0.10) | (ames_corr < -0.10)].sort_values(ascending = False).keys()\n",
     "list_feats"
    ]
   },
@@ -1479,6 +1481,12 @@
        "      <th>lot_area</th>\n",
        "      <th>bsmt_full_bath</th>\n",
        "      <th>half_bath</th>\n",
+       "      <th>2nd_flr_sf</th>\n",
+       "      <th>bsmt_unf_sf</th>\n",
+       "      <th>bedroom_abvgr</th>\n",
+       "      <th>screen_porch</th>\n",
+       "      <th>kitchen_abvgr</th>\n",
+       "      <th>enclosed_porch</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1504,6 +1512,12 @@
        "      <td>13517</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>754</td>\n",
+       "      <td>192.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1527,6 +1541,12 @@
        "      <td>11492</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1209</td>\n",
+       "      <td>276.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1549,6 +1569,12 @@
        "      <td>68.0</td>\n",
        "      <td>7922</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1573,6 +1599,12 @@
        "      <td>9802</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>700</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1595,6 +1627,12 @@
        "      <td>82.0</td>\n",
        "      <td>14235</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>614</td>\n",
+       "      <td>676.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1623,12 +1661,26 @@
        "3              7           0.0           0           0.0              0   \n",
        "4              6           0.0           0           0.0             59   \n",
        "\n",
-       "   wood_deck_sf  lot_frontage  lot_area  bsmt_full_bath  half_bath  \n",
-       "0             0          68.0     13517             0.0          1  \n",
-       "1             0          43.0     11492             1.0          1  \n",
-       "2             0          68.0      7922             1.0          0  \n",
-       "3           100          73.0      9802             0.0          1  \n",
-       "4             0          82.0     14235             0.0          0  "
+       "   wood_deck_sf  lot_frontage  lot_area  bsmt_full_bath  half_bath  \\\n",
+       "0             0          68.0     13517             0.0          1   \n",
+       "1             0          43.0     11492             1.0          1   \n",
+       "2             0          68.0      7922             1.0          0   \n",
+       "3           100          73.0      9802             0.0          1   \n",
+       "4             0          82.0     14235             0.0          0   \n",
+       "\n",
+       "   2nd_flr_sf  bsmt_unf_sf  bedroom_abvgr  screen_porch  kitchen_abvgr  \\\n",
+       "0         754        192.0              3             0              1   \n",
+       "1        1209        276.0              4             0              1   \n",
+       "2           0        326.0              3             0              1   \n",
+       "3         700        384.0              3             0              1   \n",
+       "4         614        676.0              3             0              1   \n",
+       "\n",
+       "   enclosed_porch  \n",
+       "0               0  \n",
+       "1               0  \n",
+       "2               0  \n",
+       "3               0  \n",
+       "4               0  "
       ]
      },
      "execution_count": 9,
@@ -1649,7 +1701,7 @@
     {
      "data": {
       "text/plain": [
-       "((1640, 20), (411, 20), (1640, 1), (411, 1))"
+       "((1640, 26), (411, 26), (1640, 1), (411, 1))"
       ]
      },
      "execution_count": 10,
@@ -1688,8 +1740,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8035217902997219, 0.8542037354316081\n",
-      "0.050681945131886175\n"
+      "0.8115119976504857, 0.8598710281970969\n",
+      "0.04835903054661128\n"
      ]
     }
    ],
@@ -1703,18 +1755,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "8de05b8b-3107-49ce-a1b5-1d0e1746be1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.85040102, 0.79312742, 0.84536824, 0.76974   , 0.55591379]),\n",
-       " array([0.86085886, 0.88614659, 0.88814039, 0.82501001, 0.84135121]))"
+       "(array([0.85520153, 0.80717814, 0.84924867, 0.77329183, 0.56551826]),\n",
+       " array([0.85065313, 0.88767136, 0.90111411, 0.82821971, 0.85088313]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1725,17 +1777,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "90e92277-8dd1-49ad-b713-b84fcfca8585",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7629100944317463, 0.8603014120567016)"
+       "(0.7700876858324304, 0.8637082878465072)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,17 +1798,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "1ebab0a4-c353-4db8-80d3-5a4388022eaf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.81552011, 0.85044161, 0.70982379, 0.86413026, 0.75786356])"
+       "array([0.81753247, 0.8559246 , 0.7189286 , 0.86873936, 0.76246469])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1767,23 +1819,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "3db14733-1cdc-468d-9589-d772d44198c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7995558655903834"
+       "0.8047179462889209"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cross_val_score(lr_1, X, y, cv = 5).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c5aba94b-5487-4d5f-ad1b-b6afa4437185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_eval(true_val, pred_val):\n",
+    "    rmse = mean_squared_error(true_val, pred_val, squared = False)\n",
+    "    r2 = r2_score(true_val, pred_val)\n",
+    "    \n",
+    "    return f'RMSE: {rmse}', f'R2 Score: {r2}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "fb9ed24d-2838-4b72-87a3-38784058ecd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_1_preds = lr_1.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3aa1f701-5a29-475e-9e10-1bf56159c930",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('RMSE: 28854.435657388534', 'R2 Score: 0.8598710281970969')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_eval(y_test, lr_1_preds)"
    ]
   },
   {
@@ -1796,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "bd6ec88f-77fa-47b3-b0fd-1518c950c994",
    "metadata": {},
    "outputs": [],
@@ -1809,17 +1906,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "9fa7c917-4881-43de-8d86-e3ec09aac3d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.803521790299722, 0.854203735431607)"
+       "(0.8115119976504857, 0.8598710281970952)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1831,45 +1928,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "4d49cf78-6ac8-4f61-b403-65db6c60ef98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0.85040102, 0.79312742, 0.84536824, 0.76974   , 0.55591379]),\n",
-       " array([0.86085886, 0.88614659, 0.88814039, 0.82501001, 0.84135121]))"
+       "array([0.81753247, 0.8559246 , 0.7189286 , 0.86873936, 0.76246469])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_score(lr_1, X_train_sc, y_train, cv = 5), cross_val_score(lr_1, X_test_sc, y_test, cv = 5)"
+    "cross_val_score(lr_1, X, y, cv = 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "id": "12f02dd9-536f-4a28-8559-aed885d300cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7629100944317464, 0.8603014120567014)"
+       "0.8047179462889209"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_score(lr_1, X_train_sc, y_train, cv = 5).mean(), cross_val_score(lr_1, X_test_sc, y_test, cv = 5).mean()"
+    "cross_val_score(lr_1, X, y, cv = 5).mean()"
    ]
   },
   {
@@ -1882,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "c6fd4010-067a-4a4f-a791-03b074f50151",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1988,7 @@
        "(1640, 1)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "cab64ee1-ecff-4981-858c-0bfdc75e4e71",
    "metadata": {},
    "outputs": [
@@ -1913,7 +2009,7 @@
        "(1640,)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,24 +2020,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "aa5e8112-e7cd-47f9-b8dd-23dad172a756",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8024640546197501, 0.8548114245713652)"
+       "(0.8104963269508956, 0.8600862318463774)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Lasso:\n",
-    "lasso = LassoCV()\n",
+    "l_alphas = np.logspace(-3, 3, 100)\n",
+    "\n",
+    "lasso = LassoCV(alphas = l_alphas,\n",
+    "                cv = 5,\n",
+    "                max_iter = 50_000)\n",
     "\n",
     "lasso.fit(X_train_sc, y_train['saleprice'])\n",
     "lasso.score(X_train_sc, y_train['saleprice']), lasso.score(X_test_sc, y_test['saleprice'])"
@@ -1949,8 +2048,188 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "d2d224be-0c63-4680-8eb5-fb883a22454f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "572.236765935022"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lasso.alpha_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "47395ee6-b790-424c-b52d-a928b8cef93b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.81759673, 0.85652062, 0.71757012, 0.86961711, 0.7624647 ])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(lasso, X, y['saleprice'], cv = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6efbc572-ccb2-4a4b-89fd-b39a189de7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7712756316730166, 0.8660398545904036)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(lasso, X, y['saleprice'], cv = 5).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bd95edc-2f54-4654-bd39-40a1c8720633",
+   "metadata": {},
+   "source": [
+    "**Ridge**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "62d26f0b-6d66-4905-b182-c6fe9df42f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8076273057199519, 0.8607063942550219)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridge = RidgeCV(alphas = l_alphas)\n",
+    "\n",
+    "ridge.fit(X_train_sc, y_train['saleprice'])\n",
+    "ridge.score(X_train_sc, y_train['saleprice']), ridge.score(X_test_sc, y_test['saleprice'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7b1cf9ce-b7ea-4686-8fb3-fd64916db016",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "284.8035868435805"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridge.alpha_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbe69fbb-e330-470d-9861-ddd9b91efbe0",
+   "metadata": {},
+   "source": [
+    "**Huber Regressor**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ce31b0a2-8ae9-45af-88fb-55b0e287175a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7806617552269743, 0.8544184901207914)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#https://machinelearningmastery.com/robust-regression-for-machine-learning-in-python/\n",
+    "huber = HuberRegressor(max_iter = 50_000)\n",
+    "\n",
+    "huber.fit(X_train, y_train['saleprice'])\n",
+    "huber.score(X_train, y_train['saleprice']), huber.score(X_test, y_test['saleprice'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a80e2e28-a14e-44d5-956a-3b50bd0b4f1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "huber_preds = huber.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "3ed0e9e0-1bd8-4f3c-a5ba-fe679cc33cd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('RMSE: 29410.453865379834', 'R2 Score: 0.8544184901207914')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_eval(y_test, huber_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8ab24ddd-716f-48d1-a231-03fea45f115e",
+   "id": "5461d062-2320-487c-a49b-0f24596e9528",
    "metadata": {},
    "outputs": [],
    "source": []
